Mejoras en estilos.
Se agrega clase CSS para encerrar las tablas de administradores con bordos.

Se organizan estilos de la pantalla de gestión de usuarios.

--- a/web/css/business-styles.css
+++ b/web/css/business-styles.css
@@ -7,6 +7,10 @@ label {
     border: 1px solid #269abc;
 }
 
+.bordo-tablas {
+    border: 2px solid #269abc;
+}
+
 .btn-default {
     background-color: #a6e1ec;
     border-color: #afd9ee;
